--- a/public/styles.css
+++ b/public/styles.css
@@ -3,7 +3,7 @@ html{
     width: 100vw;
 }
 body{
-    background-color: blue;
+    background-color: darkblue;
     margin: 0;
 }
 main {
@@ -11,7 +11,6 @@ main {
     height: 100vh;
     width: 100vw;
     margin: 0;
-
 }
 .registration_fields{
     display: flex;
@@ -30,7 +29,36 @@ main {
     width: 300px;
     object-fit: cover;
 }
+
 .bio_input{
     height: 100px;
     width: 300px;
+}
+.profile_comp{
+    border: 5px solid black;
+    margin-left: 50px;
+    margin-right: 50px;
+    height: 300px;
+    display: flex;
+}
+.bio_comp{
+    background-color: white;
+
+}
+.profile_pic_corner{
+    height: 70px;
+    width: 70px;
+    margin-top: 0;
+    margin-right: 0;
+
+}
+.uploader_comp{
+    background-color: blue;
+    height: 100px;
+    width:500px;
+    display: flex;
+    border: 5px solid black;
+    align-items: center;
+    justify-content: space-around;
+    /* position: fixed; */
 }
