--- a/public/styles.css
+++ b/public/styles.css
@@ -3,21 +3,30 @@ html{
     width: 100vw;
 }
 body{
+    background-color: blue;
     margin: 0;
 }
 main {
+    font-family: Impact;
     height: 100vh;
     width: 100vw;
     margin: 0;
+
+}
+.registration_fields{
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.registration_fields{
-    display: flex;
-}
-.home_page_logo {
-    height: 300px;
+.logo {
+    height: 70px;
     width: auto;
+    top: 20;
+    left: 0;
 
+}
+.profile_pic{
+    height: 300px;
+    width: 300px;
+    object-fit: cover;
 }
