--- a/public/styles.css
+++ b/public/styles.css
@@ -3,43 +3,121 @@ html{
     width: 100vw;
 }
 body{
-    background-color: white;
+    background-color: #012c42;
     margin: 0;
 }
 main {
+    color: white;
     font-family: sans-serif;
     height: 100vh;
     width: 100vw;
     margin: 0;
 }
+.welcome{
+    display: flex;
+    flex-direction: column;
+    margin-left: 50px;
+
+}
+.welcome_components{
+    margin-left: 20%;
+
+}
+.whole{
+    display: flex;
+    flex-direction: row;
+
+}
+.home_page_logo{
+    margin-top:10%;
+    height: auto;
+    width: 200px;
+}
 .registration_fields{
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: 100vh;
 }
-
+.registration_inputs{
+    margin: 10px;
+    height: 20px;
+    width: 200px;
+    border-radius: 3px;
+    border: 2px black solid;
+}
+.registration_button {
+    margin: 10px;
+    height: 20px;
+    width: 200px;
+    border-radius: 3px;
+    border: 2px black solid;
+    background-color: lightgreen;
+}
 .header img{
     width: 70px;
     height: 70px;
     object-fit: cover;
     margin: 5px 10px;
 }
-
 .header {
     display: flex;
     justify-content: space-between;
     height: 80px;
     width: 100%;
 }
-.logo_container{
-    
+.profile_info{
+    display: flex;
+    flex-direction: column;
 }
 
-.other_profile_comp{
+
+.friends_comp{
+    border-radius: 3px;
     border: 2px solid black;
     margin-left: 50px;
     margin-right: 50px;
-    height: 300%;
+    height: 200px;
+    display: flex;
+    align-items: center;
+}
+.friend{
+    color: black;
+    background-color: lightgray;
+    margin: 10px;
+    border-radius: 3px;
+    border: 1px solid black;
+    width: 200px;
+    height: 110px;
+    display: flex;
+}
+.online_friend{
+    color: blue;
+    background-color: lightgray;
+    margin: 10px;
+    border-radius: 3px;
+    border: 1px solid black;
+    display: flex;
+    width: 110px;
+}
+.online_friend img {
+    margin: 5px;
+}
+.friend img {
+    margin: 5px;
+}
+.link{
+    background-color: yellow;
+    color: yellow;
+}
+
+.other_profile_comp{
+    border-radius: 3px;
+    border: 2px solid red;
+    margin-left: 50px;
+    margin-right: 50px;
+    height: auto;
     display: flex;
 }
 .other_profile_profilepic{
@@ -62,10 +140,11 @@ main {
 }
 
 .profile_comp{
-    border: 2px solid black;
+    border: 2px solid red;
+    border-radius: 3px;
     margin-left: 50px;
     margin-right: 50px;
-    height: 300%;
+    height: auto;
     display: flex;
 }
 .profile_comp img{
@@ -81,15 +160,21 @@ img{
     height: 100px;
     width: 100px;
 }
+.friends_lable{
+    margin-left: 5%
+}
 
 .uploader_comp{
-    background-color: blue;
-    height: 100px;
-    width:500px;
+    margin-left: 100px;
+    margin-right: 100px;
+    background-color: #3a4351;
+    height: 10%;
+    width: 50%;
     display: flex;
     flex-direction: column;
-    border: 5px solid black;
+    border: 2px solid black;
+    border-radius: 3px;
     align-items: center;
     justify-content: space-around;
-    position: absolute;
+    position: fixed;
 }
